--- a/css/style.scss
+++ b/css/style.scss
@@ -48,7 +48,10 @@ $maxWidth: 1130;
 
 
 body{
-    font-family: 'Larsseit', sans-serif
+    font-family: 'Larsseit', sans-serif;
+    &._lock{
+        overflow: hidden;
+    }
 }
 
 ._container{
@@ -148,6 +151,10 @@ body{
     top: 0;
     width: 100%;
     z-index: 10;
+    transition: all 0.3s ease;
+    &._header-scroll{
+        background: rgba(255, 255, 255, 0.5);
+    }
 }
 
 .header-content {
@@ -156,7 +163,20 @@ body{
 
 .logo-wrapper {
     cursor: pointer;
+    
     .logo__svg {
+        path{
+            transition: all 0.3s ease;
+        }
+    }
+    &._menu__active{
+        z-index: 10;
+        .logo__svg {
+            path{
+                transition: all 0.3s ease;
+                fill: #fff;
+            }
+        }
     }
 }
 
@@ -164,6 +184,27 @@ body{
     flex: 0 1 62.65%;
     .menu-list {
         flex: 0 1 33.333%;
+        position: relative;
+        .menu__underline{
+            content: '';
+            position: absolute;
+            bottom: -12px;
+            left: 0;
+            background: transparent;
+            height: 1px;
+            width: 40px;
+            border-radius: 10px;
+            transition: all 0.3s ease;
+            &._menu__underline__active{
+                background: $text-main;
+            }
+            @media (max-width:770px) {
+                display: none;
+            }
+        }
+        @media (max-width:1030px) {
+            flex: 0 1 45%;
+        }
         .menu__item {
             font-size: 14px;
             line-height: 16px;
@@ -183,6 +224,105 @@ body{
         padding: 20px 30px;
         @media (max-width:1030px) {
             flex: 0 1 28.78%;
+        }
+    }
+    @media (max-width:770px) {
+        padding: 100px 0 40px 0;
+        display: flex;
+        position: fixed;
+        overflow: auto;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        //flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        background: rgba(98, 208, 223, 0.7);
+        transition: top 0.3s ease;
+        z-index: 5;
+        .menu-list{
+            flex: 0 0 100%;
+            flex-direction: column;
+            margin-bottom: 80px;
+            .menu__item{
+                font-size: 30px;
+                margin-bottom: 40px;
+                &:last-child{
+                    margin-bottom: 0;
+                }
+                a{
+                    color: #fff;
+                }
+            }
+        }
+        &._menu__active{
+            top: 0;
+            transition: top 0.3s ease;
+            
+        }
+        .header__btn{
+            font-size: 25px;
+            flex: 0 1 30%;
+            padding: 30px;
+            background: #22356F;
+        }
+    }
+    
+}
+
+.burger{
+    display: none;
+    @media (max-width:770px) {
+        display: block;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background: $blue;
+        position: relative;
+        transition: all 0.3s ease;
+        &::before, &::after, span{
+            content: '';
+            width: 26px;
+            height: 4px;
+            background: #fff;
+            position: absolute;
+            left: 12px;
+            border-radius: 10px;
+        }
+        &::before{
+            top: 14px;
+            transition: transform 0.3s ease 0s, background-color 0.1s ease 0s, top 0.1s ease 0.3s;
+        }
+        &:after{
+            top: 35px;
+            transition: transform 0.3s ease 0s, background-color 0.1s ease 0s, top 0.1s ease 0.3s;
+        }
+        span{
+            top: 24px;
+            transition: transform 0.1s ease 0.1s;
+        }
+        &._menu__active{
+            z-index: 10;
+            background: #fff;
+            transition: all 0.1s ease 0s;//, rotate 0.3s ease 0.1s;
+                
+            &::before, &::after{
+                transition: top 0.1s ease 0s, background-color 0.1s ease 0s, transform 0.3s ease 0.1s;
+                top: 24px;
+                background-color: $blue;
+            }
+            
+            &::before{
+                transform: rotate(45deg);
+            }
+            &:after{
+                transform: rotate(-45deg);
+            }
+            span{
+                transform: scale(0);
+                transition: transform 0.1s ease 0.1s;
+            }
         }
     }
 }
@@ -580,29 +720,50 @@ body{
 }
 .categories__item {
     flex: 0 1 33.333%;
-    padding: 96px 70px 282px 72px;
+    //padding: 96px 70px 282px 72px;
+    padding-bottom: 378px;
+    position: relative;
+    transition: all 0.8s ease;
+    transform-style: preserve-3d;
+    cursor: pointer;
     .item__title {
         max-width: 157px;
-        padding-right: 314px;
+        padding-right: 240px;
     }
     &:nth-child(1){
-        background: #22356F;
+        .item__front{
+            background: #22356F;
+        }
     }
     &:nth-child(2){
-        background: #0052C1;
+        .item__front{
+            background: #0052C1;
+        }
+        
     }
     &:nth-child(3){
-        background: #76B58B;
-        padding: 96px 70px 317px 72px;
+        .item__front{
+            background: #76B58B;
+        }
+        
+        //padding: 96px 70px 317px 72px;
     }
     &:nth-child(4){
-        background: #62D0DF;
+        .item__front{
+        background: #62D0DF;  
+        }
     }
     &:nth-child(5){
-        background: #DEE1FF;
+        .item__front{
+            background: #DEE1FF; 
+        }
+        
     }
     &:nth-child(6){
-        background: #8F00FF;
+        .item__front{
+            background: #8F00FF;
+        }
+        
     }
     &:nth-child(1),  &:nth-child(2){
         .item__title {
@@ -611,6 +772,42 @@ body{
                 left: 0;
             }
         }
+    }
+
+    .item__front, .item__back{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        .item__title{
+            //transform: rotateY(-180deg);
+            position: absolute;
+            top: 96px;
+            left: 70px;
+            z-index: 2;
+        }
+    }
+    .item__front{
+        z-index: 3;
+        transform: rotateY(0deg);
+        backface-visibility: hidden;
+    }
+    .item__back{
+        transform: rotateY(-180deg);
+        z-index: 2;
+        
+        img{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+    }
+    &._item__flip{
+        transform: rotateY(-180deg);
     }
     @media (max-width:1030px) {
         flex: 0 1 50%;
@@ -715,6 +912,7 @@ body{
 //ALSO-KNOW----------------------------------------------------------------------
 .also-know {
     //margin-top: 40px;
+    overflow: hidden;
     @media (max-width:770px) {
         margin: 40px 0 0 0;
         flex-direction: column-reverse;
@@ -926,7 +1124,8 @@ body{
         align-items: flex-start;
         @media (max-width:770px) {
             width: 100%;
-            justify-content: space-between;
+            flex-direction: column;
+            align-items: center;
         }
     }
     .footer-info__item {
@@ -973,14 +1172,80 @@ body{
             }
         }
         @media (max-width:770px) {
+            // &:nth-child(1), &:nth-child(2), &:nth-child(3){
+            //     //flex: 0 1 23.777%;
+            //     flex: 0 1 30.777%;
+            //     padding: 0;
+            // }
+            // &:nth-child(2){
+            //     flex: 0 1 32.569%;
+            //     padding: 0 20px;
+            // }
+            width: 100%;
+            text-align: center;
+            align-items: center;
+            margin-bottom: 40px;
+            padding-bottom: 40px;
+            border-bottom: 1px solid #919AB7;
             &:nth-child(1), &:nth-child(2), &:nth-child(3){
-                //flex: 0 1 23.777%;
-                flex: 0 1 30.777%;
-                padding: 0;
+                padding-left: 0;
+                border-left: none;
+                border-right: none;
             }
-            &:nth-child(2){
-                flex: 0 1 32.569%;
-                padding: 0 20px;
+            
+            &:last-child{
+                margin-bottom: 0;
+                padding-bottom: 0;
+                border-bottom: none;
+            }
+
+
+            .footer-info__title{
+                text-align: center;
+                margin-bottom: 0;
+                position: relative;
+                font-size: 30px;
+                transition: all 0.3s ease;
+                &::before, &::after{
+                    content: '';
+                    position: absolute;
+                    width: 26px;
+                    height: 4px;
+                    border-radius: 10px;
+                    background: #000;
+                    top: 30%;
+                    transition: all 0.3s ease;
+                }
+                &::before{
+                    right: -40px;
+                    transform: rotate(45deg);
+                }
+                &::after{
+                    right: -57px;
+                    transform: rotate(-45deg);
+                }
+
+                &._footer__item__active{
+                    margin-bottom: 30px;
+                    transition: all 0.3s ease;
+                    &::before, &::after{
+                        background: $orange;
+                    }
+                    &::before{
+                        transform: rotate(-45deg);
+                    }
+                    &::after{
+                        transform: rotate(45deg);
+                    }
+                }
+            }
+            .footer-info__text__block{
+                font-size: 20px;
+                display: none;
+                span{
+                    display: none;
+                    margin-bottom: 0;
+                }
             }
             
         }
