--- a/css/style.css
+++ b/css/style.css
@@ -860,18 +860,17 @@ body._lock {
 @media (max-width: 770px) {
   .about-us-main__list .about-us-main__item {
     -webkit-box-flex: 0;
-        -ms-flex: 0 1 33.333%;
-            flex: 0 1 33.333%;
+        -ms-flex: 0 1 50%;
+            flex: 0 1 50%;
   }
   .about-us-main__list .about-us-main__item.item__green, .about-us-main__list .about-us-main__item.item__rose, .about-us-main__list .about-us-main__item.item__white__blue, .about-us-main__list .about-us-main__item.item__blue {
     padding: 72px 31px 165px 31px;
   }
 }
-@media (max-width: 770px) {
-  .about-us-main__list .about-us-main__item {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
+@media (max-width: 430px) {
+  .about-us-main__list .about-us-main__item.item__green .item__title, .about-us-main__list .about-us-main__item.item__rose .item__title, .about-us-main__list .about-us-main__item.item__white__blue .item__title, .about-us-main__list .about-us-main__item.item__blue .item__title {
+    font-size: 28px;
+    max-width: 243px;
   }
 }
 
